# samari-catcher

./: .gitignore  Cargo.toml  PLAN.md  README.md  deploy.sh  guidelines.md  package.json
desktop/: Cargo.toml  PLAN.md
desktop/src/: app.rs  main.rs  ollama.rs  protocol.rs  session.rs  settings.rs  syntax.rs  terminal_font.rs
desktop/src/ui/: ai_agent.rs  files.rs  mod.rs  settings.rs  tabs.rs  terminal.rs
src/host/: init.lua
src/server/: index.ts
src/viewer/: 404.html  index.html  index.tsx  main.tsx  screens.tsx  session.tsx  styles.css
src/viewer/computer/: index.tsx
tools/: make.lua
